--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,10 +132,9 @@ a {
 /* Portfolio */
 
 .portfolio-container {
-    width: 960px;
-    background: #ffffff;
-    /* height: 550px; */
-    border: 2px solid #dddddd;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 66.66%;
 }
 
 .box {
